# cli-friendkeeper

./: README.md  ccli  install.sh  pyproject.toml
com.kevincojean.cli-friendkeeper/: .gitignore
infra/ccli/: ccli.py  task
src/python/main/cli_friendkeeper/: __init__.py  __main__.py  check_logic.py  clock.py  config.py  errors.py  models.py  paths.py  repository.py  store.py
src/python/main/cli_friendkeeper/ccli/: ccli.py
src/python/main/cli_friendkeeper/ccli/task/: run_add.py  run_catch_up.py  run_config_set.py  run_config_show.py  run_due.py  run_list.py  run_rebuild_state.py  run_remove.py  run_touch.py
src/python/test/cli_friendkeeper/: __init__.py  conftest.py
src/python/test/cli_friendkeeper/tests/: test_check_logic.py  test_clock.py  test_concurrency.py  test_config.py  test_e2e.py  test_errors.py  test_facade.py  test_models.py  test_paths.py  test_repository.py  test_run_add.py  test_run_catch_up.py  test_run_config_set.py  test_run_config_show.py  test_run_due.py  test_run_list.py  test_run_rebuild_state.py  test_run_remove.py  test_run_touch.py  test_store.py
