[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-friendkeeper"
version = "0.1.0"
description = "Stay in touch CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pymonad>=2.4",
    "xdg>=6.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/main/cli_friendkeeper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src/python/main"]

[tool.mypy]
strict = true
